# CmakeLearn

./: CMakeLists.txt  CTestConfig.cmake  tutorial.cxx
MathFunctions/: CMakeLists.txt  MakeTable.cmake  MakeTable.cxx  MathFunctions.cxx  MathFunctions.h  mysqrt.cxx
_CPack_Packages/Darwin/TGZ/Tutorial-1.0-Darwin/lib/: libMathFunctions.1.0.0.dylib
_CPack_Packages/Darwin/TGZ/Tutorial-1.0-Darwin/lib/cmake/MathFunctions/: MathFunctionsTargets.cmake
debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutoriald  cmake_install.cmake  install_manifest.txt  libMathFunctionsd.1.0.0.dylib
debug/MathFunctions/: Makefile  cmake_install.cmake
release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MakeTable  Makefile  MathFunctionsTargets.cmake  Tutorial  cmake_install.cmake  install_manifest.txt
release/MathFunctions/: Makefile  cmake_install.cmake
